# ChloroplastTools

./: Colony_count.ijm  README.md
data/: Extended Source Data Fig.2.xlsx  README.md  Source Data Fig.2.xlsx  Source Data Fig.3.xlsx  Source Data Fig.4.xlsx  Source Data Fig.5.xlsx  Source Data Fig.6.xlsx
images/: README.md
parts/: README.md
parts/attach source/: pME_Cp_2_XXX_PWendyII_5'clpP_3'petA_petB_locus.gb  pME_Cp_2_XXX_PWendyII_5'clpP_3'petA_psbD_locus.gb  pME_Cp_2_XXX_PWendyII_5'clpP_3'petA_psbH_locus.gb  pME_Cp_2_XXX_PWendyII_5'clpP_3'petA_rbcL_locus.gb  pME_Cp_2_XXX_PWendyII_5'psbC_3'ftsH_psbH_locus.gb  pME_Cp_2_XXX_PWendyII_5'psbC_3'petA_petB_locus.gb  pME_Cp_2_XXX_PWendyII_5'psbC_3'petA_psbD_locus.gb  pME_Cp_2_XXX_PWendyII_5'psbC_3'petA_psbH_locus.gb  pME_Cp_2_XXX_PWendyII_5'psbC_3'petA_rbcL_locus.gb  pME_Cp_2_XXX_PpsaA2_5'psaB_3'ycf12_psbH_locus.gb  pME_Cp_2_XXX_PrbcL_5'psaC_3'rps2_psbH_locus.gb  pME_Cp_2_XXX_Prrn16_5'clpP_3'psbA_psbH_locus.gb  pME_Cp_2_XXX_Prrn16_5'clpP_3'rps11_psbH_locus.gb  pME_Cp_2_XXX_Prrn16_5'clpP_3'rrnB_psbH_locus.gb  pME_Cp_2_XXX_Prrn16_5'psaA_3'psbA_psbH_locus.gb  pME_Cp_2_XXX_Psyn15_5'psbF_3'rps8_psbH_locus.gb  pME_Cp_2_XXX_Psyn17_5'clpP_3'TMV_psbH_locus.gb  (+13 more)
parts/overhangs/: 2_Promoter fwd.gb  (+44 more)
pipeline/measurement/: README.md  calc.py  config.py  destination.py  measurement.py  pyproject.toml  source.py
pipeline/measurement/ODs/: Plate_2_A2_absorbance.xlsx
pipeline/processing/: __init__.py  absorbance.py  config.py  data_processing.py  data_processing_simple.py  echo.py  luminescence.py  platereader.py  pyproject.toml
(+698 files in other folders)
